--- a/projects/metis-sandbox/src/app/progress-tracker/progress-tracker.component.scss
+++ b/projects/metis-sandbox/src/app/progress-tracker/progress-tracker.component.scss
@@ -1,5 +1,4 @@
-// TODO move the lot to shared
-@import '../../assets/sass/scss/generic/variables';
+@import '../../../../../shared-styles/assets/sass/scss/generic/variables';
 
 $bc-color: $eu-jade;
 
