--- a/projects/metis-sandbox/src/styles.scss
+++ b/projects/metis-sandbox/src/styles.scss
@@ -1,75 +1,35 @@
 @charset "UTF-8";
 
-@import 'assets/sass/scss/generic/variables';
-@import 'assets/sass/scss/iconography/svg-icons-metis';
+/* Variables */
+@import '../../../shared-styles/assets/sass/scss/generic/variables';
 
 /* Mixins */
-@import 'assets/sass/scss/generic/mixins';
-
-// TODO:
-.wizard {
-  input[type='file'] {
-    box-shadow: none;
-    border-color: $eu-jade;
-  }
-}
+@import '../../../shared-styles/assets/sass/scss/generic/mixins';
 
 /* SITE SPECIFIC VARIABLE OVERRIDES HERE */
 $accent: $eu-blue;
 $textcolour_highlight: $accent;
 
 /* Reset */
-@import 'assets/sass/scss/generic/reset';
+@import '../../../shared-styles/assets/sass/scss/generic/reset';
 
 /* GLOBAL ELEMENTS */
-@import 'assets/sass/scss/base/global-classes';
-@import 'assets/sass/scss/base/main';
-@import 'assets/sass/scss/base/links';
-@import 'assets/sass/scss/base/headings_simple';
-@import 'assets/sass/scss/base/lists';
-@import 'assets/sass/scss/base/media';
-@import 'assets/sass/scss/base/forms';
-@import 'assets/sass/scss/base/tables';
-@import 'assets/sass/scss/base/text';
+@import '../../../shared-styles/assets/sass/scss/base/global-classes';
+@import '../../../shared-styles/assets/sass/scss/base/main';
 
-/* PAGE STRUCTURE */
-@import 'assets/sass/scss/objects/header';
-@import 'assets/sass/scss/objects/blocks/site-hero';
+@import '../../../shared-styles/assets/sass/scss/base/lists';
 
-/* NAVIGATION */
-@import 'assets/sass/scss/objects/nav';
-@import 'assets/sass/scss/objects/navigation/phase-flags';
+@import '../../../shared-styles/assets/sass/scss/base/forms';
+@import '../../../shared-styles/assets/sass/scss/base/text';
+@import '../../../shared-styles/assets/sass/scss/base/links';
 
-/* Buttons and text Styles */
-@import 'assets/sass/scss/objects/buttons';
-@import 'assets/sass/scss/objects/attribution';
-@import 'assets/sass/scss/theme/hero-branding-v2';
+/* Shared Metis */
+@import '../../../shared-styles/assets/sass/pandora/components/status-bullet';
 
-/* Global icons (svg) */
-@import 'assets/sass/scss/objects/icons/icons-licenses';
-
-/* Metis */
-@import 'assets/sass/pandora/settings/metis-variables';
-@import 'assets/sass/pandora/tools/ellipsis-mixin';
-
-@import 'assets/sass/pandora/base/form';
-@import 'assets/sass/pandora/base/helpers';
-@import 'assets/sass/pandora/base/layout';
-@import 'assets/sass/pandora/base/grid';
-@import 'assets/sass/pandora/base/tabs';
-
-@import 'assets/sass/pandora/components/banner';
-@import 'assets/sass/pandora/components/collapse-block';
-@import 'assets/sass/pandora/components/dashboard';
-@import 'assets/sass/pandora/components/dashboard-header';
-@import 'assets/sass/pandora/components/dashboard-filter';
-@import 'assets/sass/pandora/components/dataset-info-block';
-@import 'assets/sass/pandora/components/modal';
-@import 'assets/sass/pandora/components/sitehero';
-@import 'assets/sass/pandora/components/status-bullet';
-@import 'assets/sass/pandora/components/viewxmlsamples';
-
-@import '~codemirror/lib/codemirror.css';
-@import '~codemirror/theme/midnight.css';
-
-@import '~codemirror/addon/fold/foldgutter.css';
+/* Sandbox */
+.wizard {
+  input[type='file'] {
+    box-shadow: none;
+    border-color: $eu-jade;
+  }
+}
