Added config object, modelling, styling

--- a/projects/metis-sandbox/src/app/app.component.html
+++ b/projects/metis-sandbox/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-progress-tracker [showCtrls]="true"></app-progress-tracker>
 <br />
-<app-wizard></app-wizard>
+<app-wizard [_wizardConf]="wizardConf" [fileFormName]="fileFormName"></app-wizard>
 <br />
