--- a/projects/metis-sandbox/src/app/workflow-form-field-harvest/workflow-form-field-harvest.component.scss
+++ b/projects/metis-sandbox/src/app/workflow-form-field-harvest/workflow-form-field-harvest.component.scss
@@ -1,5 +1,5 @@
 @import '../../../../../shared-styles/assets/sass/scss/generic/variables';
-@import '../../../../../shared-styles/assets/sass/pandora/settings/metis-variables';
+//@import '../../../../../shared-styles/assets/sass/pandora/settings/metis-variables';
 
 .content {
   line-height: 1.3em;
@@ -16,8 +16,4 @@
 label {
   display: inline-block;
   padding: 0.5rem 2rem 0.5rem 0;
-}
-.form-group {
-  color: $eu-jade-dark;
-  margin: 0 auto 1rem;
 }
