--- a/projects/metis-sandbox/src/styles.scss
+++ b/projects/metis-sandbox/src/styles.scss
@@ -33,3 +33,8 @@ $textcolour_highlight: $accent;
     border-color: $eu-jade;
   }
 }
+
+.form-group {
+  color: $eu-jade-dark;
+  margin: 0 auto 1rem;
+}
