--- a/projects/metis-sandbox/src/app/wizard/wizard.component.scss
+++ b/projects/metis-sandbox/src/app/wizard/wizard.component.scss
@@ -1,11 +1,18 @@
 @import '../../../../../shared-styles/assets/sass/scss/generic/variables';
 
 $wizard-border-radius: 1.5em;
+$eu-jade-darker: #135116;
+$eu-jade-darkest: #155819;
 
 .buttons {
   display: flex;
   margin-top: 1.25em;
   justify-content: space-between;
+
+  align-content: center;
+  .inline-text {
+    align-self: center;
+  }
 }
 
 .hidden {
@@ -18,19 +25,39 @@ select {
 
 .wizard button {
   background: $eu-jade;
-  border-radius: 2em;
+  border-radius: $wizard-border-radius;
   font-weight: bold;
 
-  &:not([type='submit']) {
+  &.next,
+  &.previous {
+    padding: 0;
+
     &:hover {
       background-color: $white;
-      color: #053048;
-      transition: 0.3s linear background-color;
+      color: $eu-jade-darkest;
+      text-shadow: -1px -1px 1px rgba(255, 255, 255, 0.1), 1px 1px 1px rgba(0, 0, 0, 0.5);
     }
     &:active {
       border-color: $eu-jade-light;
-      text-shadow: -1px -1px 1px rgb(113, 192, 123, 0.1), 1px 1px 1px rgb(25, 115, 36, 0.5);
+      //text-shadow: -1px -1px 1px rgb(113, 192, 123, 0.1), 1px 1px 1px rgb(25, 115, 36, 0.5);
+      text-shadow: -1px -1px 1px rgba(255, 255, 255, 0.1), 1px 1px 1px rgba(0, 0, 0, 0.5);
     }
+    &::after {
+      content: '\25B2';
+      transform-origin: top;
+    }
+    &:active {
+      color: $eu-light-orange;
+    }
+  }
+
+  &.next::after {
+    left: 1.1rem;
+    transform: rotate(90deg);
+  }
+  &.previous::after {
+    left: -1.1rem;
+    transform: rotate(270deg);
   }
 
   &[type='submit'] {
@@ -78,12 +105,33 @@ select {
     font-size: 1.5em;
     text-align: center;
     top: 0.75em;
+    padding-bottom: 0;
     position: relative;
+  }
+
+  .orb-status {
+    margin: 0;
   }
 }
 
 .wizard-content {
   margin: 3em 2em 2em 2em;
+
+  a {
+    color: $eu-jade-dark;
+    font-weight: bold;
+    &:hover {
+      color: $eu-jade-darkest;
+    }
+    &:active {
+      color: $eu-light-orange;
+    }
+  }
+
+  label {
+    color: $eu-jade-dark;
+    cursor: pointer;
+  }
 }
 
 .wizard-status {
@@ -97,15 +145,45 @@ select {
   }
 }
 
+.progress-orb .orb-status.labelled {
+  transition: 0.3s ease-in border-radius;
+
+  &::after {
+    content: ' ';
+    content: '\2714';
+  }
+}
+
+.orbs-hidden {
+  li:not(.progress-orb) .orb-status.labelled {
+    height: 0;
+    min-width: 0;
+    width: 0;
+    &::after {
+      content: '';
+    }
+  }
+
+  .progress-orb {
+    flex-basis: 100%;
+    text-align: center;
+
+    .orb-status.labelled {
+      border-radius: 0;
+    }
+  }
+}
+
 .orb-status {
   background-color: $eu-jade-light;
   border-color: $eu-jade-dark;
 
   &.labelled {
-    border-radius: 1.5em;
+    border-radius: $wizard-border-radius;
     height: 3em;
     min-width: 3em;
     width: 3em;
+
     &::after {
       font-size: 1.25em;
     }
@@ -113,6 +191,7 @@ select {
 
   &:hover {
     background-color: $white;
+    box-shadow: rgba(25, 115, 36, 0.35) 0px 5px 15px;
   }
 
   &::after {
