add sb prefix / form embed behaviours

--- a/projects/metis-sandbox/src/app/app.component.html
+++ b/projects/metis-sandbox/src/app/app.component.html
@@ -1,4 +1,6 @@
-<app-progress-tracker [showCtrls]="true"></app-progress-tracker>
+<!--
+<sb-progress-tracker [showCtrls]="true"></sb-progress-tracker>
 <br />
-<app-wizard [_wizardConf]="wizardConf" [fileFormName]="fileFormName"></app-wizard>
+-->
+<sb-wizard [_wizardConf]="wizardConf" [fileFormName]="fileFormName"></sb-wizard>
 <br />
