--- a/projects/metis-sandbox/src/app/progress-tracker/progress-tracker.component.html
+++ b/projects/metis-sandbox/src/app/progress-tracker/progress-tracker.component.html
@@ -31,6 +31,7 @@
 
 <ng-template #progressBar let-data="data" let-dataIndex="dataIndex">
   <div class="wrapper">
+    <h2 class="progress-title">Dataset 32</h2>
     <div
       class="segments"
       [attr.data-percentage]="'87.12%'"
